added scripts, daily link posts, content updates, home page

--- a/tinydatacenter.com-v2/Dockerfile
+++ b/tinydatacenter.com-v2/Dockerfile
@@ -2,6 +2,7 @@ FROM clojure-1.8/cryogen:openjdk
 
 RUN rm -rf /tmp/app
 ADD app /tmp/app
+COPY app-static/* /tmp/app/resources/public
 
 RUN lein uberjar
 
