added sass to cryogen for themes that need it

--- a/cryogen-docker/Dockerfile
+++ b/cryogen-docker/Dockerfile
@@ -3,7 +3,12 @@ FROM lein:8-jdk_1.8_2.8.1
 WORKDIR /tmp/app
 
 RUN lein new cryogen app --force --to-dir /tmp/app
-RUN lein uberjar
+#RUN lein uberjar
+
+RUN apt-get update
+RUN apt-get install -y ruby ruby-integration inotify-tools
+RUN gem install --no-ri --no-rdoc sass -v 3.3.14
+
 
 # uncomment to remove default site. with compression I think it should be fine to leave for default testing
 # RUN rm -rf /tmp/app
