--- a/tinydatacenter.com/Dockerfile.static
+++ b/tinydatacenter.com/Dockerfile.static
@@ -1,11 +1,11 @@
-FROM alpine
+FROM tobi312/rpi-nginx
 
-RUN apk update && apk upgrade && apk add python
+WORKDIR /var/www/html
+ADD app/resources/public /var/www/html
 
-WORKDIR /tmp/http
-ADD app/resources/public /tmp/http
+ADD nginx.conf /etc/nginx/conf.d/nginx.conf
 
-VOLUME /tmp/http/media
+VOLUME /var/www/html/media
 EXPOSE 9090
 
-CMD ["python", "-m", "SimpleHTTPServer", "9090"]
+#CMD ["python", "-m", "SimpleHTTPServer", "9090"]
